[project]
name = "spyder-parse"
version = "0.1.0"
description = ""
authors = [
    {name = "FrostWillmott",email = "i.tkachenko@zohomail.eu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
